src/test/deca/context/valid/created/sans_objet/operateur_unary_2.deca
// Description:
//    Programme minimaliste utilisant operateur unary.
//
// Resultats:
//  
//
// Historique:
//    cree le 13/01/2024

{
        float x;
        x=-1;
}