src/test/deca/context/invalid/created/sans_objet/operateur_unary_2.deca
// Description:
//    Programme minimaliste utilisant operateur unary.
//
// Resultats:
//      error ligne 12
//
// Historique:
//    cree le 13/01/2024

{
        int x;
        x = !1;
}